--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     </header>
 
     <main class="main-content">
-        <a href="https://satilog-suporte.github.io/s4t170g5203/" class="month-button" id="btn-maio">Maio - 2025</a>
-        <a href="https://satilog-suporte.github.io/s4t170g5202/" class="month-button" id="btn-junho">Junho - 2025</a>
+        <a href="https://satilog-suporte.github.io/s4t170g5203mai/" class="month-button" id="btn-maio">Maio - 2025</a>
+        <a href="https://satilog-suporte.github.io/s4t170g5202jun/" class="month-button" id="btn-junho">Junho - 2025</a>
     </main>
     
     </body>
