--- a/index.html
+++ b/index.html
@@ -11,190 +11,171 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
-        /*
+    /*
  * ===================================================================
- * ESTILOS MODERNOS E OTIMIZADOS
+ * ESTILOS MODERNOS E OTIMIZADOS (MODIFICADO)
  * ===================================================================
  */
 
-        /* Variáveis de Cor (Tema) */
-        :root {
-            --cor-fundo-escuro: #121212;
-            --cor-fundo-container: #1a1d24;
-            --cor-texto-claro: #f1f1f1;
-            --cor-texto-secundario: #a0a0a0;
-            --cor-borda-sutil: rgba(255, 255, 255, 0.1);
-            --cor-laranja-vibrante: #f96500;
-            --gradiente-laranja: linear-gradient(45deg, #f96500 0%, #ff8c00 100%);
-            --sombra-laranja-glow: 0 0 25px rgba(249, 101, 0, 0.5);
-            --transition-suave: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
+/* Variáveis de Cor (Tema) */
+:root {
+    --cor-fundo-escuro: #121212;
+    --cor-fundo-container: #1a1d24;
+    --cor-texto-claro: #f1f1f1;
+    --cor-texto-secundario: #a0a0a0;
+    --cor-borda-sutil: rgba(255, 255, 255, 0.1);
+    --cor-laranja-vibrante: #f96500;
+    --gradiente-laranja: linear-gradient(45deg, #f96500 0%, #ff8c00 100%);
+    --sombra-laranja-glow: 0 0 25px rgba(249, 101, 0, 0.5);
+    --transition-suave: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-        /* Reset e Configurações Globais */
-        *,
-        *::before,
-        *::after {
-            box-sizing: border-box;
-        }
+/* Reset e Configurações Globais */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: var(--cor-fundo-escuro);
-            background-image: radial-gradient(circle at top, rgba(38, 42, 51, 0.8), var(--cor-fundo-escuro));
-            color: var(--cor-texto-claro);
-            margin: 0;
-            padding: 2rem;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+body {
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background-color: var(--cor-fundo-escuro);
+    background-image: radial-gradient(circle at top, rgba(38, 42, 51, 0.8), var(--cor-fundo-escuro));
+    color: var(--cor-texto-claro);
+    margin: 0;
+    padding: 2rem;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-        /* Cabeçalho */
-        header {
-            width: 100%;
-            max-width: 900px;
-            text-align: center;
-            margin-bottom: 3rem;
-            border-bottom: 1px solid var(--cor-borda-sutil);
-            padding-bottom: 1.5rem;
-        }
+/* Cabeçalho */
+header {
+    width: 100%;
+    max-width: 900px;
+    text-align: center;
+    margin-bottom: 3rem;
+    border-bottom: 1px solid var(--cor-borda-sutil);
+    padding-bottom: 1.5rem;
+}
 
-        header img {
-            height: 45px;
-            margin-bottom: 1rem;
-        }
+header img {
+    height: 45px;
+    margin-bottom: 1rem;
+}
 
-        header h1 {
-            font-size: 2rem;
-            font-weight: 600;
-            color: var(--cor-texto-claro);
-            margin: 0;
-        }
+header h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--cor-texto-claro);
+    margin: 0;
+}
 
-        /* Conteúdo Principal - Grade Responsiva */
-        .main-content {
-            width: 100%;
-            max-width: 900px;
-            display: grid;
-            /* Cria colunas responsivas: o máximo que couber com no mínimo 200px */
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1.5rem;
-            flex-grow: 1;
-            /* Faz o main ocupar o espaço disponível */
-        }
+/* Conteúdo Principal - Layout Horizontal */
+.main-content {
+    width: 100%;
+    max-width: 900px;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    overflow-x: auto; /* Adiciona barra de rolagem horizontal se necessário */
+    padding: 1rem 0; /* Adiciona um pouco de padding vertical */
+}
 
-        /* Animação de Entrada dos Botões */
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
+/* Animação de Entrada dos Botões */
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+/* Estilo Base dos Botões (Menores Horizontalmente, Fonte Maior) */
+.month-button,
+.return-button {
+    text-decoration: none;
+    color: var(--cor-texto-claro);
+    padding: 1rem 1.5rem; /* Reduzindo o padding horizontal */
+    font-size: 1.2rem; /* Aumentando a fonte */
+    font-weight: 600;
+    text-align: center;
+    border-radius: 12px;
+    transition: var(--transition-suave);
+    background: var(--cor-fundo-container);
+    border: 1px solid var(--cor-borda-sutil);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    white-space: nowrap; /* Evita quebras de linha nos botões */
 
-        /* Estilo Base dos Botões */
-        .month-button,
-        .return-button {
-            text-decoration: none;
-            color: var(--cor-texto-claro);
-            padding: 1.25rem;
-            font-size: 1.1rem;
-            font-weight: 600;
-            text-align: center;
-            border-radius: 12px;
-            transition: var(--transition-suave);
-            background: var(--cor-fundo-container);
-            border: 1px solid var(--cor-borda-sutil);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
+    /* Aplica a animação */
+    opacity: 0; /* Inicia invisível */
+    animation: fadeInUp 0.5s ease-out forwards;
+}
 
-            /* Aplica a animação */
-            opacity: 0;
-            /* Inicia invisível */
-            animation: fadeInUp 0.5s ease-out forwards;
-        }
+/* Atraso na animação para cada botão */
+.month-button:nth-child(1) { animation-delay: 0.1s; }
+.month-button:nth-child(2) { animation-delay: 0.2s; }
+.month-button:nth-child(3) { animation-delay: 0.3s; }
+.month-button:nth-child(4) { animation-delay: 0.4s; }
+.month-button:nth-child(5) { animation-delay: 0.5s; }
+.month-button:nth-child(6) { animation-delay: 0.6s; }
 
-        /* Atraso na animação para cada botão, criando um efeito cascata */
-        .month-button:nth-child(1) {
-            animation-delay: 0.1s;
-        }
+/* Efeito Hover */
+.month-button:hover {
+    transform: translateY(-5px);
+    background: var(--gradiente-laranja);
+    border-color: var(--cor-laranja-vibrante);
+    box-shadow: var(--sombra-laranja-glow);
+    color: white;
+}
 
-        .month-button:nth-child(2) {
-            animation-delay: 0.2s;
-        }
+/* Estilo para Foco com Teclado */
+.month-button:focus-visible,
+.return-button:focus-visible {
+    outline: 2px solid var(--cor-laranja-vibrante);
+    outline-offset: 2px;
+}
 
-        .month-button:nth-child(3) {
-            animation-delay: 0.3s;
-        }
+/* Rodapé */
+footer {
+    margin-top: 3rem;
+    text-align: center;
+}
 
-        .month-button:nth-child(4) {
-            animation-delay: 0.4s;
-        }
+.return-button {
+    background: transparent;
+    color: var(--cor-texto-secundario);
+    border: 1px solid var(--cor-borda-sutil);
+    padding: 0.75rem 1.5rem;
+    font-weight: 500;
+}
 
-        .month-button:nth-child(5) {
-            animation-delay: 0.5s;
-        }
+.return-button:hover {
+    color: var(--cor-texto-claro);
+    border-color: var(--cor-texto-claro);
+}
 
-        .month-button:nth-child(6) {
-            animation-delay: 0.6s;
-        }
+/* Ajustes para telas menores (Mobile) - O layout flexível cuidará da adaptação */
+@media (max-width: 600px) {
+    body {
+        padding: 1.5rem;
+    }
 
-        /* Efeito Hover (passar o mouse) */
-        .month-button:hover {
-            transform: translateY(-5px);
-            background: var(--gradiente-laranja);
-            border-color: var(--cor-laranja-vibrante);
-            box-shadow: var(--sombra-laranja-glow);
-            color: white;
-        }
+    header h1 {
+        font-size: 1.5rem;
+    }
 
-        /* Estilo para Foco com Teclado (Acessibilidade) */
-        .month-button:focus-visible,
-        .return-button:focus-visible {
-            outline: 2px solid var(--cor-laranja-vibrante);
-            outline-offset: 2px;
-        }
-
-        /* Rodapé */
-        footer {
-            margin-top: 3rem;
-            text-align: center;
-        }
-
-        .return-button {
-            background: transparent;
-            color: var(--cor-texto-secundario);
-            border: 1px solid var(--cor-borda-sutil);
-            padding: 0.75rem 1.5rem;
-            font-weight: 500;
-        }
-
-        .return-button:hover {
-            color: var(--cor-texto-claro);
-            border-color: var(--cor-texto-claro);
-        }
-
-        /* Ajustes para telas menores (Mobile) */
-        @media (max-width: 600px) {
-            body {
-                padding: 1.5rem;
-            }
-
-            header h1 {
-                font-size: 1.5rem;
-            }
-
-            .main-content {
-                gap: 1rem;
-            }
-        }
+    .main-content {
+        padding: 1rem;
+    }
+}
     </style>
 </head>
 
