--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ footer {
         <a href="Abril/Abril.html" class="month-button">Abril</a>
         <a href="Maio/Maio.html" class="month-button">Maio</a>
         <a href="Junho/Junho.html" class="month-button">Junho</a>
+        <a href="Julho/Julho.html" class="month-button">Julho</a>
     </main>
 
     <footer>
@@ -203,3 +204,4 @@ footer {
 </body>
 
 </html>
+
