--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <body>
 
     <header>
-        <img src="https://placehold.co/200x60/161B22/E6EDF3?text=Sua+Logo" alt="Logo da Sua Empresa">
+        <img src="LOGO.png" alt="Logo">
         <h1>Relatórios Mensais de 2025</h1>
     </header>
 
