--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
         <a href="Maio/Maio.html" class="month-card">Maio</a>
         <a href="Junho/Junho.html" class="month-card">Junho</a>
         <a href="Julho/Julho.html" class="month-card">Julho</a>
+        <a href="Agosto/Agosto.html" class="month-card">Agosto</a>
+
     </main>
 
     <footer>
@@ -214,3 +216,4 @@
 </body>
 
 </html>
+
