--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <a href="Junho/Junho.html" class="month-card">Junho</a>
         <a href="Julho/Julho.html" class="month-card">Julho</a>
         <a href="Agosto/Agosto.html" class="month-card">Agosto</a>
-
+        <a href="Setembro/Setembro.html" class="month-card">Setembro</a>
     </main>
 
     <footer>
