--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         <a href="Julho/Julho.html" class="month-card">Julho</a>
         <a href="Agosto/Agosto.html" class="month-card">Agosto</a>
         <a href="Setembro/Setembro.html" class="month-card">Setembro</a>
+        <a href="Outubro/Outubro.html" class="month-card">Outubro</a>
     </main>
 
     <footer>
